# social-battle-royale

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
src/: conversation.cpp  conversation.hpp  game.hpp  main.cpp  npc.cpp  npc.hpp  player.cpp  player.hpp  player_intro.cpp  world.cpp  world.hpp
src/npcs/: conversation_logic.cpp  conversation_logic.hpp  elias.cpp  relationships.cpp  relationships.hpp
